--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,26 @@
             <!--为每一个电影条目右侧添加了一个 IMDb 链接，href 属性的值为 IMDb 搜索页面的 URL，搜索关键词通过查询参数 q 传入-->
             <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
         </span>
+        <span class="float-right">
+        <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
+            <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
+        </form>
+        </span>
+        <span class="float-right">
+        <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
+        </span>
     </li>
     {% endfor %}
 </ul>
 <img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}" title="to~to~ro~">
 {% endblock %}
+
+<p>{{ movies|length }} Titles</p>
+<form method="post">  /通过Action属性指定表单提交的URL，method属性指定表单提交的方式，默认为当前页面
+    <!--通过name属性指定表单字段的名称，autocomplete属性指定浏览器是否自动完成表单字段，required属性指定表单字段是否必填-->
+    <!--通过type属性指定表单字段的类型，submit类型的表单字段会显示为一个提交按钮-->
+    <!--通过value属性指定表单字段的值，显示在表单字段的右侧-->
+    Name <input type="text" name="title" autocomplete="off" required>
+    Year <input type="text" name="year" autocomplete="off" required>
+    <input class="btn" type="submit" name="submit" value="Add">
+</form>
